--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -1935,4 +1935,54 @@
 	{
 		color: var(--main-text) !important;
 	}
+
+	/*Reporting*/
+	.introduction-header
+	{
+		color: var(--main-text) !important;
+	}
+	.introduction-body, .introduction-bullet-items
+	{
+		color: var(--dimmer-text) !important;
+	}
+
+	/*Help*/
+	.ghp-header-searchBox, .ghp-autocomplete-label
+	{
+		color: var(--dimmer-text) !important;
+	}
+	/*
+	.ghp-header-searchIcon.ghpv-loaded, .ghp-iconTextComponent-icon, .ghp-autocomplete-icon
+	{
+		filter: invert(100%) grayscale(100%) brightness(150%);
+	}
+	.ghp-autocompleteGlass
+	{
+		background: rgba(0,0,0,3) !important;
+	}
+	.ghp-card-title
+	{
+		color: var(--main-text) !important;
+	}
+	.ghp-card, .ghp-content, .ghp-iconTextComponent, .ghp-contentFrame, .hcfe
+	{
+		background-color: var(--second-background) !important;
+		border-color: var(--hover-background) !important;
+	}
+	.ghp-iconTextComponent:hover .ghp-iconTextComponent-label,
+	.ghp-iconTextComponent:hover .ghp-separator
+	{
+		color: var(--main-color) !important;
+		border-color: var(--hover-background) !important;
+	}
+	.ghp-separator
+	{
+		border-color: var(--hover-background) !important;
+	}
+	.ghp-iconTextComponent-label, .hcfe
+	{
+		color: var(--dimmer-text) !important;
+	}
+	*/
+	
 }
