--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace github.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 2.7.3
+@version 2.7.4
 @updateURL https://rawgit.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -26,7 +26,7 @@
 	"Ubuntu_grey": "#EF7847",
 	"Ubuntu_purple": "#EF7847",
 	"Orange": "#ff6905",
-	"Jisho_夜明け":  "#EF7D6C"
+	"Jisho_夜明け": "#EF7D6C"
 }
 
 @var select mainBackground 'Main background color' {
@@ -46,7 +46,7 @@
 	"Ubuntu_grey": "#312D2A",
 	"Ubuntu_purple": "#2C071A",
 	"Orange": "#0a0400",
-	"Jisho_夜明け":  "#332222"
+	"Jisho_夜明け": "#332222"
 }
 
 @var select secondBackground 'Second background color' {
@@ -66,7 +66,7 @@
 	"Ubuntu_grey": "#3D3C38",
 	"Ubuntu_purple": "#430B28",
 	"Orange": "#0e0702",
-	"Jisho_夜明け":  "#2A1B1B"
+	"Jisho_夜明け": "#2A1B1B"
 }
 
 @var select hoverBackground 'Hover background color' {
@@ -86,7 +86,7 @@
 	"Ubuntu_grey": "#59564D",
 	"Ubuntu_purple": "#520D30",
 	"Orange": "#110903",
-	"Jisho_夜明け":  "#863B2F"
+	"Jisho_夜明け": "#863B2F"
 }
 
 @var select mainText 'Main text color' {
@@ -106,10 +106,10 @@
 	"Ubuntu_grey": "#F2F1EF",
 	"Ubuntu_purple": "#F2F1EF",
 	"Orange": "#fff9f5",
-	"Jisho_夜明け":  "#EFB26C"
+	"Jisho_夜明け": "#EFB26C"
 }
 
-@var select dimerText 'Secondary text color' {
+@var select dimmerText 'Secondary text color' {
 	"DeepDark": "#CCCCCC",
 	"BreezeDark": "#bdc3c7",
 	"Vertex Dark": "#AEAFB0",
@@ -126,19 +126,19 @@
 	"Ubuntu_grey": "#E6E5E3",
 	"Ubuntu_purple": "#E6E5E3",
 	"Orange": "#ffede1",
-	"Jisho_夜明け":  "#986E3F"
+	"Jisho_夜明け": "#986E3F"
 }
 
 ==/UserStyle== */
 
-@-moz-document regexp('https?:\/\/(?!gaming\.).*youtube\.com\/.*') {
+@-moz-document regexp('https?:\/\/(?!gaming\.).*youtube\.com\/(?!premium).*$') {
 
 /*For the new Material Design for YouTube*/
 /*Theme made by RaitaroH @https://github.com/RaitaroH/YouTube-DeepDark*/
 
 /*GNU General Public License v3.0.*/
 
-/*2.7.3*/
+/*2.7.4*/
 
 	/*Main color variables*/
 	:root
@@ -979,6 +979,18 @@
 		color: var(--main-color) !important;
 		background: transparent !important;
 		border-color: var(--main-color) !important;
+	}
+	/*Premium*/
+	.badge-style-type-red.ytd-badge-supported-renderer
+	{
+		color: #DA4453 !important;
+		background: transparent !important;
+		border-color: var(--main-color) !important;
+	}
+	/*Series name*/
+	.badge-style-type-collection.ytd-badge-supported-renderer
+	{
+		color: var(--main-color) !important;
 	}
 
 	.yt-simple-endpoint.style-scope.yt-formatted-string
@@ -2107,5 +2119,77 @@
 		color: var(--dimmer-text) !important;
 	}
 	*/
-	
+
+	/*History*/
+	yt-formatted-string.ytd-sub-feed-option-renderer
+	{
+		color: var(--dimmer-text) !important;
+	}
+	#title.ytd-sub-feed-selector-renderer, ytd-sub-feed-option-renderer.ytd-sub-feed-selector-renderer
+	{
+		border-color: var(--hover-background) !important;
+	}
+	/*dialog confirm*/
+	yt-confirm-dialog-renderer[dialog][dialog][dialog]
+	{
+		background-color: var(--second-background) !important;
+	}
+	#scroller.yt-confirm-dialog-renderer
+	{
+		color: var(--dimmer-text) !important;
+	}
+	#cancel-button.yt-confirm-dialog-renderer
+	{
+		color: var(--main-text) !important;
+	}
+	.buttons.yt-confirm-dialog-renderer
+	{
+		border-color: var(--hover-background) !important;
+	}
+
+	/*Premium*/
+	/*video*/
+	#main-title.ytd-unlimited-offer-module-renderer
+	{
+		color: var(--main-text) !important;
+	}
+	#sub-title.ytd-unlimited-offer-module-renderer
+	{
+		color: var(--dimmer-text) !important;
+	}
+	/*popup*/
+	.ytd-mealbar-promo-renderer-message-title.ytd-mealbar-promo-renderer
+	{
+		color: var(--main-text) !important;
+	}
+	.ytd-mealbar-promo-renderer-message-text.ytd-mealbar-promo-renderer
+	{
+		color: var(--dimmer-text) !important;
+	}
+	.button-container.ytd-mealbar-promo-renderer
+	{
+		border-color: var(--hover-background) !important;
+	}
+	/*the horrible banner on main page*/
+	ytd-banner-promo-renderer.banner-promo-style-type-masthead-v2 .ytd-banner-promo-renderer-inline-image.ytd-banner-promo-renderer,
+	.ytd-banner-promo-renderer-logo.ytd-banner-promo-renderer yt-img-shadow.ytd-banner-promo-renderer
+	{
+		filter: grayscale(100%) invert(85%);
+	}
+	.ytd-banner-promo-renderer-background.ytd-banner-promo-renderer
+	{
+		background: #262626 !important; /*the matching color resulted due to the filter*/
+	}
+	.ytd-banner-promo-renderer-title.ytd-banner-promo-renderer
+	{
+		color: var(--dimmer-text) !important;
+	}
+	ytd-banner-promo-renderer.banner-promo-style-type-masthead-v2 ytd-button-renderer#action-button.ytd-banner-promo-renderer
+	{
+		border-color: var(--dimmer-text) !important;
+	}
+	#dismiss-button[is-icon-button].ytd-banner-promo-renderer
+	{
+		background: transparent !important;
+	}
 }
